new file:   controllers/cart.js 	new file:   controllers/productsCart.js 	modified:   controllers/users.js 	modified:   middleware/validate.js 	modified:   package-lock.json 	modified:   package.json 	modified:   routes/index.js 	modified:   swagger.json 	new file:   trash/sum.js 	new file:   trash/sum.test.js 	new file:   trash/test.js 	renamed:    trash.js -> trash/trash.js
